--- a/jiexi/解析.conf
+++ b/jiexi/解析.conf
@@ -10,36 +10,36 @@
 # 绿叶,https://hc.izny.cn/json.php?url=,1
 # 无名1,http://api.ckflv.cn/?url=,1
 # 无名1,{{host}}/parse/api/无名.js?url=,1
-很牛逼,http://rxjx.kuanjv.com/allm3u8.php?url=,1
-虾米,https://dm.xmflv.com:4433/?url=
-左岸,https://jx.bozrc.com:4433/player/analysis.php?v=
-全网通,http://jx.nikucms.com/pc/index6.php?url=
-91,http://91fanli.top/m3u8/?url=
-BT5V,https://rx.bt5v.com/json/jsonindex.php/?url=,1
+# 很牛逼,http://rxjx.kuanjv.com/allm3u8.php?url=,1
+虾米,https://jx.xmflv.cc/?url=
+# 左岸,https://jx.bozrc.com:4433/player/analysis.php?v=
+# 全网通,http://jx.nikucms.com/pc/index6.php?url=
+# 91,http://91fanli.top/m3u8/?url=
+# BT5V,https://rx.bt5v.com/json/jsonindex.php/?url=,1
 # 查询,https://chaxun.truechat365.com/?url= # 这个解析真的牛逼,只能电脑看
 # llq,https://hc.izny.cn/json.php?url=,1
 # 江湖,{{host}}/parse/api/江湖.js?url=,1
-GGTV搜集,https://play.fuqizhishi.com/juhe/API.php?appkey=caijijuhe220902&url=,1,
-CY,https://vip.cyu0.cn/home/api?type=ys&uid=1353484&key=efopqwABCLOTVYZ278&url=,1
+# GGTV搜集,https://play.fuqizhishi.com/juhe/API.php?appkey=caijijuhe220902&url=,1,
+# CY,https://vip.cyu0.cn/home/api?type=ys&uid=1353484&key=efopqwABCLOTVYZ278&url=,1
 # ggtv,https://play.fuqizhishi.com/jx/API.php?appkey=xiaobai888&url=,1
 # 爱酷,https://cache.json.icu/home/api?type=ys&uid=292796&key=fnoryABDEFJNPQV269&url=,1
-ok解析,https://okjx.cc/?url=
+# ok解析,https://okjx.cc/?url=
 全民1,http://api.wpsseo.cn/?v=
 m3u8tv,https://jx.m3u8.tv/jiexi/?url=
-Fosi,https://play.fositv.com/?url=
-诺讯,https://www.nxflv.com/?url=
-傻逼聊,https://svip.spchat.top/api/?key=O9HGeIVUqU3REsnmQP&url=,1
-208,https://v.2080kk.com/home/api?type=ys&uid=1308653&key=behnpstwxBCHJMQ029&url=,1
-8090,https://www.8090.la/8090/?url=
-365,https://chaxun.truechat365.com/?url=
+# Fosi,https://play.fositv.com/?url=
+# 诺讯,https://www.nxflv.com/?url=
+# 傻逼聊,https://svip.spchat.top/api/?key=O9HGeIVUqU3REsnmQP&url=,1
+# 208,https://v.2080kk.com/home/api?type=ys&uid=1308653&key=behnpstwxBCHJMQ029&url=,1
+# 8090,https://www.8090.la/8090/?url=
+# 365,https://chaxun.truechat365.com/?url=
 # 爱酷,https://jx.zhanlangbu.com/API.php?appkey=53df3aa2fdb66bcbc4d05730b6fbfc71&url=,1
 # 插萝莉,http://chaloli.cn/home/api?type=ys&uid=1&key=dklsuzIKNPRVW14568&url=,1
-无名2,https://h5.freejson.xyz/player/?url=
-无名3,https://freejx.rx88.top:1234/?url=
-无名4,https://play.fositv.com/?url=
-真聊,https://chaxun.truechat365.com/?url=
-猪蹄,https://jx.iztyy.com/svip/?url=
-m2090,https://m2090.com/?url=
+# 无名2,https://h5.freejson.xyz/player/?url=
+# 无名3,https://freejx.rx88.top:1234/?url=
+# 无名4,https://play.fositv.com/?url=
+# 真聊,https://chaxun.truechat365.com/?url=
+# 猪蹄,https://jx.iztyy.com/svip/?url=
+# m2090,https://m2090.com/?url=
 # b = a.map(it=>it.name+','+it.url+','+it.type).join('\n');console.log(b);
 # 思古解析,https://jsap.attakids.com/?url=
 # 云解析,https://jx.ppflv.com/?url=
