--- a/jiexi/解析.conf
+++ b/jiexi/解析.conf
@@ -48,7 +48,7 @@ m3u8tv,https://jx.m3u8.tv/jiexi/?url=
 # 虾米解析,https://jx.xmflv.com/?url=
 # 飞飞智能,https://y.9dan.cc/?v=
 # 左岸解析,https://jx.bozrc.com:4433/player/?url=
-# 8090解析,https://www.8090g.cn/?url=
-# ckplayer无广,https://www.ckplayer.vip/jiexi/?url=
-# 盘古无广,http://www.pangujiexi.cc/jiexi.php?url=
+8090解析,https://www.8090g.cn/?url=
+ckplayer无广,https://www.ckplayer.vip/jiexi/?url=
+盘古无广,http://www.pangujiexi.cc/jiexi.php?url=
 # 江湖,http://jx.vipmv.co/?url=
